test/extra/positive/allBooleanBus.net
INPUT a, b, muxChoice
OUTPUT shouldBe1010, shouldBeA, notA, and, or, nand,
xor, mux
VAR shouldBe1010:4, shouldBeA:4, notA:4, and:4, or:4, nand:4,
xor:4, mux:4, a:4, b:4, muxChoice
IN
shouldBe1010 = 1010
shouldBeA = a
notA = NOT a
and = AND a b
or = OR a b
nand = NAND a b
xor = XOR a b
mux = MUX muxChoice a b
