test/extra/negative/busChoiceForMux.net
INPUT a, b, choice
OUTPUT r
VAR a, b, choice:2, r
IN
r = MUX choice a b
